samples/_failures_safe/1761308989_36512d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a39f3b0.c: In function ‘main’:
./samples/SAFE/__tmp_6a39f3b0.c:139:5: error: expected declaration or statement at end of input
  139 |     if (entry_count == 0) {
      |     ^~
./samples/SAFE/__tmp_6a39f3b0.c:139:5: error: expected declaration or statement at end of input
